// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should not parse an array 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received an array",
    "path": [],
    "received": "array",
  },
]
`;

exports[`should not parse null 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
]
`;
